# CCProfileSwitch

./: .gitignore  CHANGELOG.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SWITCH_ART.txt  VERIFICATION_REPORT.md  claude_profile_manager_typer_rich.py  codeconcat_output.markdown  conftest.py  lesley.json  pyproject.toml  shell-integration.sh
cc_profile_switch/: __init__.py  cli.py  config.py  constants.py  fzf_integration.py  storage.py  theme.py  utils.py
tests/: test_basic.py  test_cli.py
