[tool.poetry]
name = "cc-profile-switch"
version = "0.2.0"
description = "Multi-provider Claude Code & Z-AI profile manager with secure credential storage"
authors = ["Claude Profile Manager"]
readme = "README.md"
packages = [{include = "cc_profile_switch"}]

[tool.poetry.dependencies]
python = "^3.8.1"
typer = {extras = ["all"], version = "^0.16.0"}
rich = "^13.0.0"
keyring = "^24.0.0"
platformdirs = "^4.0.0"
click = "^8.1.0"
filelock = "^3.0.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
claude-profile = "cc_profile_switch.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true